--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap");
 html, body {
   background: #0C121F;
   height: 100%;
@@ -6,13 +7,69 @@ html, body {
   padding: 0;
 }
 
+* {
+  user-select: none;
+}
+
+.content {
+  position: absolute;
+  width: 75%;
+  height: 80%;
+  left: 12.5%;
+  top: 10%;
+  background-color: #070B17;
+  border: 20px solid #547DA0;
+  box-shadow: 0 1px 50px #000;
+  color: #FFF;
+  text-align: center;
+  font-family: "Roboto Mono", monospace;
+  font-size: 50px;
+  z-index: 2;
+}
+
+a {
+  font-size: 30px;
+  font-style: italic;
+  cursor: pointer;
+  transition-duration: 0.15s;
+  transform: none;
+  display: inline-block;
+  margin-bottom: 5px;
+  text-decoration: none;
+  color: #FFF;
+}
+
+a:hover {
+  color: #AAA;
+  transform: scaleX(1.1);
+}
+
+.selfie {
+  width: 150px;
+  height: 150px;
+  border: 3px solid #FFF;
+  background-color: #577DF5;
+  border-radius: 50%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+img {
+  margin-top: 7px;
+  margin-left: -5px;
+  width: 120px;
+  height: 120px;
+  transform: scale(1.55, 1.55);
+}
+
 .dot {
   position: absolute;
   border-radius: 50%;
-  height: 60px;
-  width: 60px;
+  height: 40px;
+  width: 40px;
   padding: 0px;
   margin: 0px;
+  z-index: 1;
 }
 
 @-webkit-keyframes circular-animation {
